--- a/in-cluster/default.yaml
+++ b/in-cluster/default.yaml
@@ -12,10 +12,10 @@ spec:
         collectorName: dnsutils
         command:
           - ping
-        containerName: kotsadm
-        name: kots/admin_console
+        containerName: dnsutils
+        name: default/dnsutils
         selector:
-          - app=kotsadm
+          - app=dnsutils
         timeout: 10s
     - exec:
         args:
