--- a/in-cluster/dagr.yaml
+++ b/in-cluster/dagr.yaml
@@ -4,6 +4,11 @@ metadata:
   name: default
 spec:
   collectors:
+    - logs:
+        collectorName: nginx
+        name: default/nginx
+        selector:
+          - app: nginx
     - exec:
         collectorName: dnsutils
         command:
