--- a/in-cluster/dagr.yaml
+++ b/in-cluster/dagr.yaml
@@ -21,6 +21,7 @@ spec:
     - copyFromHost:
         collectorName: dagr-copy
         name: mega
+        command: "ls -al"
         hostPath: /etc/hosts
         extractArchive: true
         image: alpine
